# rust-engage

./: .dockerignore  .env.example  .gitignore  ANDROID.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  engage-server.db-shm  engage-server.db-wal  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: android.yml
src/: App.vue  auth.rs  config.ts  db.rs  main.rs  main.ts  models.rs  state.rs  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: contacts.rs  crypto.rs  disappear.rs  groups.rs  identity.rs  messages.rs  mod.rs  prekeys.rs
src-tauri/src/crypto/: identity.rs  keys.rs  mod.rs  ratchet.rs  sender_key.rs  session.rs  x3dh.rs
src-tauri/src/storage/: db.rs
src/components/: ConversationList.vue  MessageThread.vue
src/composables/: useCrypto.ts  useDisappearingMessages.ts  useOpkReplenishment.ts  useServerApi.ts  useWebRTC.ts  useWebSocket.ts
src/router/: index.ts
src/routes/: contacts.rs  groups.rs  invites.rs  keys.rs  messages.rs  mod.rs  nextcloud.rs  oauth.rs  turn.rs  ws.rs
src/stores/: auth.ts  contacts.ts  groups.ts  identity.ts  messages.ts
src/styles/: global.css
src/views/: AuthCallbackView.vue  CallView.vue  ChatView.vue  GroupView.vue  InviteView.vue  LoginView.vue  SettingsView.vue  SetupView.vue
