[package]
name = "engage-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }

base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
dashmap = "5"

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
urlencoding = "2"
getrandom = "0.4.2"
